Bug #85825 --> don't resend messages which we weren't able to send when doing send later. r=sspitzer sr=bienvenu